# writ

./: Cargo.toml  README.md
benches/: core.rs
src/: author.rs  blob.rs  commit.rs  database.rs  entry.rs  index.rs  lib.rs  locked_file.rs  main.rs  object.rs  refs.rs  repo.rs  stat.rs  status.rs  test_support.rs  tree.rs  with_digest.rs  workspace.rs
src/core/: locked_file.rs  mod.rs  refs.rs  repo.rs  stat.rs  status.rs
src/core/db/: author.rs  blob.rs  cache.rs  commit.rs  mod.rs  object.rs  tree.rs  tree_old.rs
src/core/index/: entry.rs  mod.rs
src/core/snapshots/: writ__index__tests__parents_after_entry_1.snap  writ__index__tests__parses_sample.snap  writ__workspace__tests__a.snap  writ__workspace__tests__dir_1.snap
src/core/ws/: mod.rs  path.rs
src/core/ws/snapshots/: writ__core__ws__tests__a.snap  (+2 more)
src/db/: author.rs  blob.rs  cache.rs  commit.rs  mod.rs  object.rs  tree.rs  tree_old.rs
src/index/: entry.rs  mod.rs
src/index/snapshots/: writ__index__tests__parses_sample.snap
src/snapshots/: writ__index__tests__parents_after_entry_2.snap  writ__index__tests__parses_sample.snap  writ__workspace__tests__a.snap  writ__workspace__tests__dot.snap
src/ui/: mod.rs
src/ws/: mod.rs  path.rs
src/ws/snapshots/: writ__ws__tests__a.snap  writ__ws__tests__dir_1.snap  writ__ws__tests__dot.snap
test_support/: Cargo.toml
test_support/src/: lib.rs
tests/: add.rs  commit.rs  core.rs  repo_init.rs  status.rs  support.rs  tests.rs
tests/core/: add.rs  commit.rs  repo_init.rs  status.rs
tests/core/snapshots/: add__nonexistent_add_fails.snap  add__unreadable_add_fails.snap  core__add__add_fails_if_index_locked.snap  core__add__nonexistent_add_fails.snap  core__add__unreadable_add_fails.snap  core__repo_init__can_init.snap  core__repo_init__can_init_nonexistent_ws.snap  repo_init__can_init.snap  repo_init__can_init_nonexistent_ws.snap
tests/snapshots/: add__add_fails_if_index_locked.snap  add__nonexistent_add_fails.snap  add__unreadable_add_fails.snap  tests__add_fails_if_index_locked.snap  tests__init.snap  tests__nonexistent_add_fails.snap  tests__unreadable_add_fails.snap
(+10 files in other folders)
