[package]
name = "writ"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.21"
displaydoc = "0.2.1"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
anyhow = "1.0.40"
bstr = "0.2.15"
rust-crypto = "0.2.36"
hex = "0.4.3"
tempfile = "3.2.0"
flate2 = "1.0.20"
chrono = "0.4.19"
