[package]
name = "writ"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.21"
displaydoc = "0.2.1"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
bstr = "0.2.15"
hex = "0.4.3"
tempfile = "3.2.0"
flate2 = "1.0.20"
chrono = "0.4.19"
byteorder = "1.4.3"
ring = "0.16.20"
eyre = "0.6.5"
color-eyre = "0.5.11"

[dev-dependencies]
insta = { version = "1.7.1", features = ["backtrace"] }
tempfile = "3.2.0"
cmd_lib = "1.0.10"
pretty_assertions = "0.7.2"
hexdump = "0.1.1"

# For color-eyre, see <https://github.com/yaahc/color-eyre#improving-perf-on-debug-builds>
[profile.dev.package.backtrace]
opt-level = 3
