[package]
name = "test_support"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
writ = { path = "../" }
eyre = "0.6.5"
color-eyre = "0.5.11"
lazy_static = "1.4.0"
walkdir = "2.3.2"
insta = { version = "1.7.1", features = ["backtrace"] }
tempfile = "3.2.0"
cmd_lib = "1.0.10"
pretty_assertions = "0.7.2"
hexdump = "0.1.1"
filetime = "0.2.14"
criterion = "0.3.4"
duct = "0.13.5"
tracing-subscriber = "0.2.17"

# For color-eyre, see <https://github.com/yaahc/color-eyre#improving-perf-on-debug-builds>
[profile.dev.package.backtrace]
opt-level = 3
